--- a/portal.css
+++ b/portal.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Arima:wght@100;600&family=Cinzel&family=Open+Sans:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Arima:wght@100;600&family=Cinzel&family=Open+Sans:wght@500&family=Quicksand:wght@500&display=swap');
+body {
+    font-family: Quicksand, Cinzel, serif;
+}
 #content {
     max-width: 1000px;
 }
