--- a/positionstyles.css
+++ b/positionstyles.css
@@ -177,7 +177,7 @@
 } 
 .yellow6 {
   width: 100%; 
-  height: 100px; 
+  height: 100%; 
   background-color: gold; 
   grid-column: 5/7;
   grid-row: 3/7;
