--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -7,6 +7,8 @@
 #background {
     height: 725px;
     background-color: #5D382F;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 
 /* Body */
@@ -40,6 +42,12 @@ body {
     text-align: center;
 }
 
+
+.camping-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+
 /* Content */
 #content {
     max-width: 1600px;
@@ -48,6 +56,16 @@ body {
 
 .card-img {
     border: 10px solid #d9c2a3;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+
+.card-img, .mountains {
+    width: 100%;
 }
 
 /* Footer */
@@ -55,6 +73,9 @@ footer {
     background-color: #9CA8B6;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 /* Footer Link Hover */
@@ -81,6 +102,9 @@ footer .social img{
 /* Header */
 header {
     background-color: #E7CEBE;
+    display: grid;
+    grid-template-columns: 150px auto;
+    grid-template-rows: 150px;
 }
 
 /* Headings */
@@ -93,13 +117,38 @@ h2{
 }
 
 /* Hero Image */
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+
+#hero-box{
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
 #hero-img {
     width: 100%;
 }
 
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+
+
 /* Hero Message Headings */
 #hero-msg h1, #hero-msg h4 {
     text-align: center;
+    color: white;
+}
+
+#hero-msg h4{
+    color: white;
+
 }
 
 /* Home Title */
@@ -116,21 +165,35 @@ h2{
 }
 
 /* Logo */
+
 .logo {
-    width: 80px;
+    width: 100%;
+    grid-column: 1/2;
 }
 
 #logo_link {
-    padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 
 /* Main Section */
+main {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+}
+
 main section {
     text-align: center;
 }
 
 main section img{
     box-sizing: border-box;
+}
+
+.mountains{
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 
 /* Message Paragraphs */
@@ -145,6 +208,29 @@ main section img{
     color: #C5C9CE;
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+/* Navigation */
+/*
+nav {
+    background-color: #C7987F;
+    list-style-type: none;
+    display: flex;
+    text-align: center;
+    display: flex;
+    justify-content: space-around;
+}
+*/
+
+nav{
+    background-color: #C7987F;
+    list-style-type: none;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 150px;
 }
 
 /* Navigation Link Hover */
@@ -157,19 +243,63 @@ nav a {
     color: white;
     text-align: center;
     padding: 1em;
-    min-width: 120px;
+    min-width: 150px;
     text-decoration: none;
-    padding: 35px;
+    padding: 55px;
 }
 
-/* Navigation */
-nav {
-    background-color: #C7987F;
-    list-style-type: none;
-    display: flex;
-    text-align: center;
+.rapids-card{
+    grid-column: 8/10;
+    grid-row: 2/3;
 }
 
 .rivers-card, .camping-card, .rapids-card{
     margin: 200px 0;
+}
+
+.rivers-card{
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
