--- a/PersonalSite/styles/site-plan-personal.css
+++ b/PersonalSite/styles/site-plan-personal.css
@@ -2,32 +2,36 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a & */
-@import url('https://fonts.googleapis.com/css2?family=Arima:wght@100;600&family=Cinzel&family=Graduate&family=Kelly+Slab&family=Open+Sans:wght@500&family=Quicksand:wght@500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Arima:wght@100;600&family=Cinzel&family=Graduate&family=Open+Sans:wght@500&family=Quicksand:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kelly+Slab&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Graduate&family=Kelly+Slab&display=swap');
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #250800  ;
-  --secondary-color: #C06759 ;
-  --accent1-color: #638BA3;
-  --accent2-color: #C95B1D;
+  --primary-color: #5C3537  ;
+  --secondary-color: #F7BF25 ;
+  --accent1-color: #0D213F;
+  --accent2-color: #F4F5F6;
 
   /* change the values below to your chosen font(s) */
   --heading-font: 'Graduate', sans-serif;
   --paragraph-font: 'Kelly Slab', Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #9CA8B6;  /* headlines on a white background */ 
+  --headline-color-on-white: #5C3537;  /* headlines on a white background */ 
   --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #2B2D25; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: #C5C9CE; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #6B705C  ;
+  --paragraph-color-on-white: #0D213F; /* paragraph text on a white background */ 
+  --paragraph-color-on-color: #F4F5F6; /* paragraph text on a colored background */ 
+  --paragraph-background-color: #0D213F  ;
   --nav-link-color: white;
-  --nav-background-color: #C7987F;
+  --nav-background-color: #5C3537;
   --nav-hover-link-color: white;
-  --nav-hover-background-color: #DDBEA9;
+  --nav-hover-background-color: #754c4e;
 }
 
+
+#grad {
+  color: #0D213F;
+}
 
 /*  Look around below...but DON'T CHANGE ANYTHING! */
 
