--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -248,6 +248,117 @@ nav a {
     padding: 55px;
 }
 
+#river_body {
+    display: grid;
+    grid-template-columns: 2fr 2fr 2fr;
+    grid-template-rows: 1fr;
+}
+
+#banner{
+    grid-row: 1/2;
+    grid-column: 1/4;
+    width: 100%;
+    z-index: -1;
+}
+
+#text {
+    margin-top: 110px;
+}
+
+
+.popular{
+    grid-row: 1/2;
+    grid-column: 1/4;
+    text-align: center;
+    margin-top: 20px;
+    color: rgb(186, 197, 208);
+}
+
+#spacer{
+    grid-row: 2/3;
+    width: 100px;
+    background-color: white;
+    margin: 30px;
+}
+
+#main_title {
+    grid-row: 3/4;
+    grid-column: 1/7;
+    text-align: center;
+    padding: auto;
+    margin: 15px;
+    color: #6B705C;
+}
+
+#main_para{
+    grid-column: 2/4;
+    grid-row: 4/5;
+    padding: 20px;
+    margin: 20px;
+}
+
+#main_img{
+    grid-column: 1/2;
+    grid-row: 4/5;
+    width: 90%;
+    padding: 10px;
+    margin: auto;
+    margin-left: 10px;
+    box-shadow: 1px 1px 5px rgb(186, 197, 208);
+}
+
+#deso_title{
+    grid-row: 5/6;
+    grid-column: 1/7;
+    text-align: center;
+    padding: auto;
+    margin: 15px;
+    color: #6B705C;
+}
+
+#deso_para{
+    grid-column: 1/3;
+    grid-row: 6/7;
+    padding: 20px;
+    margin: 25px;
+}
+
+#deso_img{
+    grid-column: 3/4;
+    grid-row: 6/7;
+    width: 90%;
+    padding: 10px;
+    margin: auto;
+    margin-left: 10px;
+    box-shadow: 1px 1px 5px rgb(186, 197, 208);
+}
+
+#grand_title{
+    grid-row: 7/8;
+    grid-column: 1/7;
+    text-align: center;
+    padding: auto;
+    margin: auto;
+    color: #6B705C;
+}
+
+#grand_para{
+    grid-row: 8/9;
+    grid-column: 2/4;
+    padding: 20px;
+    margin: 10px;
+}
+
+#grand_img{
+    grid-row: 8/9;
+    grid-column: 1/2;
+    width: 90%;
+    padding: 10px;
+    margin: auto;
+    margin-left: 10px;
+    box-shadow: 1px 1px 5px rgb(186, 197, 208);
+}
+
 .rapids-card{
     grid-column: 8/10;
     grid-row: 2/3;
