--- a/PersonalSite/styles/style.css
+++ b/PersonalSite/styles/style.css
@@ -1,10 +1,292 @@
-.twitter-timeline {
-    height: 800px;
+@import url('https://fonts.googleapis.com/css2?family=Kelly+Slab&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Graduate&family=Kelly+Slab&display=swap');
+
+
+/*CSS FOR ALL PAGES*/
+/* NAV CSS */
+#navbar {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    background-color: #5C3537;
+    overflow: auto;
+
+    margin-top: -9px;
 }
-#myDIV{
+
+#navbar a:hover {
+    background-color: #723d40bf;
+}
+
+#navbar a {
+    display: inline-block;
+    text-align: center;
+    padding: 12px;
+    color: white;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+/* FOOTER CSS */
+footer {
+    background-color: #0D213F;
+    padding: 15px 15px;
+    margin-top: 40px;
+    margin-bottom: -2%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+footer p a:hover {
+    text-decoration: underline;
+}
+
+footer a {
+    background-color: none;
+    color: white;
+    text-decoration: none;
+}
+
+footer p {
+    color: white;
+    font-size: 1em;
+}
+
+footer .social img{
+    padding-top: 4px;
+}
+
+
+
+/* HOME PAGE CSS */
+#center{
+    margin: auto;
+}
+
+#banner_img{
+    width: 100%;
+}
+
+.jerseydate{
+    font-family: 'Kelly Slab', Helvetica, sans-serif;
+    text-align: center;
+    font-size: 30px;
+}
+
+.jerseyimg {
+    margin: auto;
+    height: 100%;
+}
+
+#through, #intro{
+    font-size: 35px;
+    text-align: center;
+    font-family: 'Graduate', sans-serif;;
+}
+#intro{
+    font-size: 45px;
+}
+
+/*Format all the jerseys in a grid */
+#jerseys{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 75px 250px 75px 250px 75px 250px;
+}
+
+#d1 {
+    grid-row: 1/2;
+    grid-column: 1/2;
+}
+
+#i1 {
+    grid-row: 2/3;
+    grid-column: 1/2;
+}
+
+#d2 {
+    grid-row: 1/2;
+    grid-column: 2/3;
+}
+
+#i2 {
+    grid-row: 2/3;
+    grid-column: 2/3;
+}
+
+#d3 {
+    grid-row: 1/2;
+    grid-column: 3/4;
+}
+
+#i3 {
+    grid-row: 2/3;
+    grid-column: 3/4;
+}
+
+#d4 {
+    grid-row: 3/4;
+    grid-column: 1/2;
+}
+
+#i4 {
+    grid-row: 4/5;
+    grid-column: 1/2;
+}
+
+#d5 {
+    grid-row: 3/4;
+    grid-column: 2/3;
+}
+
+#i5 {
+    grid-row: 4/5;
+    grid-column: 2/3;
+}
+
+#d6 {
+    grid-row: 3/4;
+    grid-column: 3/4;
+}
+
+#i6 {
+    grid-row: 4/5;
+    grid-column: 3/4;
+}
+
+#d7 {
+    grid-row: 5/6;
+    grid-column: 1/2;
+}
+
+#i7 {
+    grid-row: 6/7;
+    grid-column: 1/2;
+}
+
+#d8 {
+    grid-row: 5/6;
+    grid-column: 2/3;
+}
+
+#i8 {
+    grid-row: 6/7;
+    grid-column: 2/3;
+}
+
+#d9 {
+    grid-row: 5/6;
+    grid-column: 3/4;
+}
+
+#i9 {
+    grid-row: 6/7;
+    grid-column: 3/4;
+}
+
+/* ROSTER CSS */
+
+.on {
+    display: grid;
+    grid-template-columns: .5fr 1fr;
+    grid-template-rows: 1fr;
+    /*border: 5px solid #0D213F;*/
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #1d386064;
+    width: 100%;
+    height: 340px;
+}
+
+.on img{
+    width: 90%;
+    margin-top: auto;
+    margin-right: auto;
+    grid-column: 1/3;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
+.on p{
+    font-family: 'Kelly Slab', Helvetica, sans-serif;
+    text-align: center;
+    margin-left: auto;
+    padding-right: 30px;
+    padding-bottom: 125px;
+    font-size: 20px;
+    grid-column: 2/3;
+    grid-row: 2/3;
+}
+
+.off {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    /*border: 5px solid #0D213F;*/
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #1d386064;
+    width: 100%;
+    height: 340px;
+}
+
+.off p{
+    font-family: 'Kelly Slab', Helvetica, sans-serif;
+    text-align: center;
+    margin: auto;
+    font-size: 18px;
+}
+
+.off{
     display: none;
+}
+
+.season{
+    grid-row: 1/2;
+    margin: auto;
+    padding-top: 25px;
+}
+
+.career {
+    grid-row: 2/3;
+    margin: auto;
+}
+
+.new {
+    grid-row: 1/3;
+    margin: auto;
+}
+
+b{
+    font-size: 22px;
+}
+
+b .name{
+    font-size: 27px;
 }
 
 .hide {
     display: none;
+}
+
+#jimg{
+    width: 85%;
+}
+
+#roster_content{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    margin: auto;
+}
+
+#rostertit{
+    font-family: 'Graduate', sans-serif;
+    text-align: center;
+    font-size: 45px;
+}
+
+
+/* NEWS CSS */
+
+.twitter-timeline {
+    height: 800px;
 }
