--- a/PersonalSite/styles/style.css
+++ b/PersonalSite/styles/style.css
@@ -238,7 +238,7 @@ footer .social img{
     transition: transform .5s;
     box-shadow: 5px 5px 10px #1d386064;
     width: 100%;
-    height: 340px;
+    height: 100%;
 }
 
 
@@ -273,7 +273,7 @@ footer .social img{
     transition: transform .5s;
     box-shadow: 5px 5px 10px #1d386064;
     width: 100%;
-    height: 340px;
+    height: 100%;
 }
 
 .off p{
